# cls

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  common.sh  config.json  data  install.sh  scripts
.github/workflows/: build.yaml
src/: clash.rs  clash_config.rs  commands.rs  config.rs  lib.rs  surge_config.rs  updater.rs  utils.rs
